# mirror-test

./: .bumpversion.cfg  .gitignore  B.txt  BUILD.md  Jenkinsfile  README.md  README.txt  build.gradle  gradle.properties  haha.txt  my_pub_pr.txt  settings.gradle  setup.cfg  setup.py
