[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE.txt

[aliases]
test=pytest

[tool:pytest]
addopts = --junitxml=build/test_report.xml -v
norecursedirs = .egg* build dist venv .gradle mirrow_test.egg_info/*

[flake8]
max-line-length = 130


[coverage:html]
directory = build/coverage_html
title = Test coverage report for mirrow_test

[coverage:xml]
output = build/coverage.xml

